# Raytracer

./: CMakeLists.txt  run.sh
include/: camera.h  hittable.h  light.h  material.h  ray.h  scene.h  shader.h  sphere.h
src/: camera.cpp  main.cpp  scene.cpp  shader.cpp  sphere.cpp
